2011-10-04  Ira Rosen  <ira.rosen@linaro.org>

	* lib/target-supports.exp (check_effective_target_vect_multiple_sizes):
	Make et_vect_multiple_sizes_saved global.
	(check_effective_target_vect64): Make et_vect64_saved global.

2011-10-03  Artjoms Sinkarovs  <artyom.shinkaroff@gmail.com>

	* gcc.c-torture/execute/vect-shuffle-2.c: New test.
	* gcc.c-torture/execute/vect-shuffle-4.c: New test.
	* gcc.c-torture/execute/vect-shuffle-1.c: New test.
	* gcc.dg/builtin-complex-err-1.c: Adjust.

2011-10-02  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/range-for22.C: New.

	* g++.dg/cpp0x/variadic65.C: Remove xfails.
	* g++.dg/cpp0x/variadic82.C: Remove xfails.
	* g++.dg/cpp0x/variadic83.C: Remove xfails.
	* g++.dg/cpp0x/variadic105.C: Remove xfails.

	* g++.dg/cpp0x/nsdmi5.C: New.

2011-10-02  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/50579
	* gcc.target/mips/mips.exp (mips_long32_abi_p, mips_long64_abi_p):
	New procedures.
	(mips-dg-options): Force an ABI option if the current ABI is
	incompatible with the required -mlong setting.  Likewise force
	a long setting if the current one is incompatible with the
	chosen ABI.  Keep abi_test_option_p, abi and eabi_p updated
	throughout procedure.
	* gcc.target/mips/abi-o64-long64.c: Require -mno-abicalls
	instead of addressing=absolute.

2011-10-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/stack-1.c: New test.

2011-10-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/pr49696.c: New test.

2011-10-02  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/ipa/ctor-empty-1.c: Update dump file.

2011-10-01  David S. Miller  <davem@davemloft.net>

	* gcc.target/sparc/cmask.c: New test.
	* gcc.target/sparc/fpadds.c: New test.
	* gcc.target/sparc/fshift.c: New test.
	* gcc.target/sparc/fucmp.c: New test.
	* gcc.target/sparc/vis3misc.c: New test.

2011-10-01  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/50585
	* gfortran.dg/assumed_charlen_arg_2.f90: New.
